svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
spec:
  type: ClusterIP
  selector:
    app: litellm
  ports:
    - name: http
      port: 80
      targetPort: http
